// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`OutOfOfficeIcon renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M28.5 18c0 7.456-6.044 13.5-13.5 13.5S1.5 25.456 1.5 18 7.544 4.5 15 4.5 28.5 10.544 28.5 18Z",
        "fill": "#fff",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M26 18c0 6.075-4.925 11-11 11S4 24.075 4 18 8.925 7 15 7s11 4.925 11 11Z",
        "fill": "#D33232",
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M9 18h12",
        "stroke": "#fff",
        "strokeLinecap": "round",
        "strokeWidth": 4,
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 33,
    "width": 30,
  },
  "type": "Svg",
}
`;

exports[`OutOfOfficeIcon renders with doNotDisturb indicator 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M28.5 18c0 7.456-6.044 13.5-13.5 13.5S1.5 25.456 1.5 18 7.544 4.5 15 4.5 28.5 10.544 28.5 18Z",
        "fill": "#fff",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M26 18c0 6.075-4.925 11-11 11S4 24.075 4 18 8.925 7 15 7s11 4.925 11 11Z",
        "fill": "#D33232",
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M9 18h12",
        "stroke": "#fff",
        "strokeLinecap": "round",
        "strokeWidth": 4,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M18 4h8l-8 6.857h8",
        "stroke": "#fff",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 8,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M18 4h8l-8 6.857h8",
        "stroke": "#D33232",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 33,
    "width": 30,
  },
  "type": "Svg",
}
`;

exports[`OutOfOfficeIcon accepts custom props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M28.5 18c0 7.456-6.044 13.5-13.5 13.5S1.5 25.456 1.5 18 7.544 4.5 15 4.5 28.5 10.544 28.5 18Z",
        "fill": "#fff",
        "stroke": "#fff",
        "strokeWidth": 3,
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M26 18c0 6.075-4.925 11-11 11S4 24.075 4 18 8.925 7 15 7s11 4.925 11 11Z",
        "fill": "#D33232",
      },
      "type": "Path",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": null,
      "props": {
        "d": "M9 18h12",
        "stroke": "#fff",
        "strokeLinecap": "round",
        "strokeWidth": 4,
      },
      "type": "Path",
    },
  ],
  "props": {
    "fill": "none",
    "height": 50,
    "width": 45,
  },
  "type": "Svg",
}
`;
